--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "framer-motion": "^11.16.4",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
+    "next-themes": "^0.4.4",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
